# STEM-Reconstruction-and-Analysis

./: README.md  algorithms.py  detection.py  main.py  post_processing.py  pre_processing.py  pyproject.toml
input_images/: simu  1024x1024, 8pm , noise dose 100, 105 million counts.tif  simu 1024x1024, 8pm , noise dose 100, 0_ sparse, i.e. no zeros set.tif  simu 1024x1024, 8pm , noise dose 100, 21.2_ sparse.tif  simu 1024x1024, 8pm , noise dose 100, 30.8_ sparse.tif  simu 1024x1024, 8pm , noise dose 100, 42.1_ sparse.tif  simu 1024x1024, 8pm , noise dose 100, 50.0_ sparse.tif  simu 1024x1024, 8pm , noise dose 100, 61.8_ sparse.tif  simu 1024x1024, 8pm , noise dose 100, 69.1_ sparse.tif  simu 1024x1024, 8pm , noise dose 100, 78.8_ sparse.tif  simu 1024x1024, 8pm , noise dose 100, 9.7_ sparse.tif  simu 1024x1024, 8pm , noise dose 100, 90.3_ sparse.tif  simu 512x512, 16pm , noise dose 500, 131 million counts.tif
