[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "v11-image-improvement-v2-2-selected-tiles"
version = "0.1.0"
[tool.poetry.dependencies]
image-slicer = "^2.1.1"
python = "^3.8"
scipy = "^1.6.2"
[tool.poetry.dev-dependencies]
